fixing constant and package overlaping scrol issue

--- a/web/css/ballerina-file-editor.css
+++ b/web/css/ballerina-file-editor.css
@@ -602,13 +602,10 @@
 
 span.package-pane {
     padding: 5px;
-    margin-left: -20px;
+    margin-left: 0px;
     background-color: #fff;
-    border: 1px solid #f0f0f0;
+    border: 1px solid #bfbfbf;
     display: none;
-    position: absolute;
-    top: 0px;
-    left: 90px;
     color: #333;
     float: left;
 }
@@ -631,7 +628,6 @@ input#package-name-input {
 
 .package-definition-main-wrapper {
     height: 50px;
-    position: absolute;
 }
 
 .tooltip-inner {
